<resources>
    <string name="app_name">Survive This</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Survive This Environment!</string>
    <string name="desert">Desert</string>
    <string name="woods">Woods</string>
    <string name="water">Water</string>
    <string name="snow">Snow</string>
    <string name="swamp">Swamp</string>
    <string name="title_activity_woods">Woods</string>
    <string name="title_activity_desert">Desert</string>
    <string name="title_activity_snow">Snow</string>
    <string name="title_activity_water">Water</string>
    <string name="title_activity_swamp">Swamp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hydration">Hydration:</string>
    <string name="woods_hydration">        Springs are the best source of water in the woods, but are hard to come by and are not likely to actually be found.
        \nRunning water is a good source of water because it is likely to have less sediment.
		\nPlant Roots are a good source of water.  To prepare them:
		\n\t&#8226;Dig or pry the roots out of the ground
		\n\t&#8226;Cut the roots into short pieces
		\n\t&#8226;Smash the pieces so the moisture runs out
		\n\t&#8226;Catch the liquid in a container.
		\n&#9734;IMPORTANT NOTE:\tAll water should be purified by brining it to a rolling boil and letting it boil for three minutes.
		\n</string>
    <string name="snow_hydration">    	Snow and ice must be melted and brought to boiling for 3 minutes to purify
        \n&#9734;IMPORTANT NOTE:\tDo not eat snow without melting first! This will bring down your body temperature and can lead to further dehydration.
        \nIf you are near the sea remember, the more crystalline and blue the ice is, the less salt it has.</string>
    <string name="food">Procuring Food:</string>
    <string name="woods_food">        Insects contain 65&#8211;80% protein, and are a great source of food.
		\nAvoid eating:
		\n\t&#8226;Insects that bite or have stingers
		\n\t&#8226;Insects that are hairy or bright colored
		\n\t&#8226;Insects that have a pugnant odor
		\n\t&#8226;spiders, ticks and mosquitoes as they carry diseases
		\nCook insects with hard shells as they often carry parasites, and remove any wings and legs before eating.
		\nWorms are also a good source of protien.  They can be found in damp humus soil.  Worms put in clean potable water will purge themselves of toxins and dirt, and can be eatten raw.
		\nFish are also a good sorce of food if they are available.  Minnows can be eatten whole.
		\n&#9734;Important Note:\tThe larger the mammal, the more damage it can do to you.  Avoid hunting large mammals unless well armed or experienced.
		\n</string>
    <string name="snow_food">    	If near water, fish can still be caught - although it may be ice fishing that is needed.
        \nAnimals that can be hunted:
        \n\t&#8226;Musk Ox
        \n\t\t&#8226;Musk Ox are one of the largest arctic mammals and are peaceful but defend their young. 
        \n\t&#8226;Reindeer
        \n\t\t&#8226;Reindeer have been domesticated by arctic human populations as a source of food, clothing, and shelter.
        \n\t&#8226;Caribou
        \n\t\t&#8226;Caribou have never been domesticated, but can make a good food source for a skilled hunter.</string>
    <string name="animals">Dangerous Animals:</string>
    <string name="woods_animals">        Insects and Arachnids
        \n\t&#8226;Scorpions are mostly nocturnal and rarely cause death but are venomous
        \n\t&#8226;Brown Recluse spiders can be recognized by the violin shaped light spot on the back of its body.  Rarely fatal, their poison causes excessive tissue degeneration that can lead to amputation if left untreated
        \n\t&#8226;Spiders of the widow family are small, dark, and can be recognized by the hourglass shaped white, red, or orange spots on its abdomen.
        \n\t&#8226;Centipedes and millipedes are mostly small and harmless but can cause infection due to skin punctures from their sharp claws.  Brush them off in the direction they are traveling.
        \n\t&#8226;Avoid Bees, Wasps, and Hornets and keep an eye out for meat&#8211;eating yellow jackets when cleaning and/or preparing meats
        \n\t&#8226;Ticks are small, round arachnids that spread diseases that can be disabling or fatal.  However, time is on your side as it can takeup to six hours to transfer the disease organisms.
        \nPoisonous Snakes
        \n\t&#8226;American Copperhead
        \n\t&#8226;Bushmaster
        \n\t&#8226;Coral Snake
        \n\t&#8226;Cottonmouth
        \n\t&#8226;Fer-de-lance
        \n\t&#8226;Rattlesnake
        \nLarge Mammals
        \n\tMake your presence known and make noise.  If you do come across any large mammals, don\'t make eye contact as it could be precieved as a challenge or threat.</string>
    <string name="snow_animals">    	Polar Bears are capable of killing a seal with a single blow of its paw.
        \nFoxes:
        \n\t&#8226;Arctic foxes often follow polar bears to feed off of what the bears leave behind.
        \nWolves:
        \n\t&#8226;Arctic wolves are usually found near caribou and can kill and adult caribou with one bite to the neck.</string>
    <string name="plants">Dangerous Plants:</string>
    <string name="shelter">Shelter:</string>
    <string name="woods_plants">    	Avoid all mushrooms - some can cause death very quickly and some have no known antidote
        \n\t&#8226;Mushroom poisoning can affect both your gastrointestinal tract and your central nervous system.
        \nSome plants can cause dermatitis poisoning:
        \n\t&#8226;Cowhage
        \n\t&#8226;Poison Ivy
        \n\t&#8226;Poison Oak
        \n\t&#8226;Poison Sumac
        \n\t&#8226;Rengas Tree
        \n\t&#8226;Trumpet Vine
        \n Other plants can be poisonous if eaten:
        \n\t&#8226;Castor Bean
        \n\t&#8226;Chinaberry
        \n\t&#8226;Death Camas
        \n\t&#8226;Lantana
        \n\t&#8226;Manchineel
        \n\t&#8226;Oleander
        \n\t&#8226;Pangi
        \n\t&#8226;Physic nut
        \n\t&#8226;poison and water hemlocks
        \n\t&#8226;Rosary Pea
        \n\t&#8226;Strychnine Tree</string>
    <string name="snow_shelter">    	Snow is filled with pockets of air this means that building a shelter out of ice or snow will keep you warm, as it will be well insulated.</string>
    <string name="fire">How to make a fire</string>
    <string name="title_activity_fire">How to make a fire</string>
    <string name="swamp_hydration">\t Hydrate, hydrate, hydrate. We cannot discuss enough the importance staying hydrating in any situation. Especially, a survival situation. Follow the basic rules of staying hydrated by keeping your clothes on, and either wearing a hat or wrapping something around your head. You must put a barrier between the sun and you so that all of your sweat is not evaporated. This leads to you sweating more and losing energy and valuable water your body needs.\n
\t Finding water in a swamp might sound easier said then done. Just because you are surrounded by water does not mean it is drinkable. The water in swamps is rarely ok to drink. You must purify almost all of the water you will find in a swamp-like environment. The best places to look for drinkable water is the base of plants, and the vines hanging from trees. If you must purify water, here are a few tips to help you out. \n
&#8226;Boil \n
&#8226;Take a plastic bag and tire one end shut so water can barley drip out. Fill with rocks and pebbles that appear clean, and let the water run through it. The fineness of the gravel will have to be changed and cycled to get the purest water. \n
\t   A Solar Still is created with a piece of plastic sheeting and a container to collect water. \n
&#8226;Find an area that gets sunlight for most of the day. \n
&#8226;Dig a bowl-shaped hole about 3 feet across and 2 feet deep. \n
&#8226;Place the container in the center of the hole. \n
&#8226;Surround the container with as much greenery as you can. \n
&#8226;Completely cover the hole with plastic and weigh the sides with rocks and sand. \n
&#8226;Place a rock in the center of the sheet, so it hangs down about 18 inches, directly over the container, to form an inverted cone. \n
&#8226;Add more sand and rocks on the edges for stability. \n
\t The moisture from the greenery will react with the heat of the sun to form condensation on the plastic. This water will run down the center of the sheet and into you container.</string>
    <string name="swamp_food">\t Looking for food in a swamp is not a hard task, there are animals everywhere.
         The problem is not letting them eat you. The first thing you should do in any swamp survival situation is 
         make a weapon. You can do this by simply finding a sturdy stick and using a rock to file down a point. 
         It is recommended though that you use the weapon for defense and use a trap to catch food.
          This is mainly for people who have no hunting experience and would lose more energy and resources hunting,
           as opposed to setting a trap. Swamps generally have an abundance of fish and turtles as well as a variety of  
           birds . There is also an abundance of raccoons, opossums, muskrats, beavers, rabbits, and of course, alligators. Choosing the rite prey is all about what you know, and what your situation is. </string>
    <string name="swamp_animals">\t How to avoid a run in with a GATOR. \n
 If you ever find yourself wading through the awesome terrain of a swamp, you might want to know these tricks. \n
&#8226;Find a long, solid stick. \n
&#8226;Make sure it is at least 4 feet in length. \n
&#8226;Extend the stick in front of you while going through the water. This will make your presence known. A startled alligator will likely attack. If he knows you\'re there, there is a chance he may leave. \n
&#8226;Before crossing any body\'s of water, wait until midday when alligators are least active. Cross at the narrowest point and watch prior for an hour to spot movement.\n
&#8226;You may use your stick to fend off an alligator to an extent \n
&#8226;The easiest way to track an alligator is to watch for bubbles coming out of the water.\n

\t Alligators are not the only thing to be worried about. The Coral snake is a very poisonous snake that lives in the swamps of the South East. The snake also has a similar looking non-venomous friend called the king snake. Remember, Red on Yellow, Kill a Fellow, Red on Black, Friend of Jack!</string>
    <string name="swamp_notes">\t Be wary of Jungle Rot. A fungal skin infection that results from constant moisture. To avoid this, take off your shoes, socks, and wet clothes. Allow your skin to dry and continuously change your socks. \n
\t Some plants found in the swamp can be used for food or medicine. The following are a list of plants used for food\: \n
&#8226;Overcup Oak\n
&#8226;Water Oak\n
&#8226;Pond Pine \n
&#8226;Cabbage Palm\n
&#8226;Hickory\n
&#8226;Hazelnut\n
\t These plants may be used for medicinal purposes\:
&#8226;Sweet flag\n
&#8226;Sassafras\n
&#8226;Willow\n
&#8226;Bog Bean\n
&#8226;Sundew\n
&#8226;Saw Palmetto\n

\tThe following are toxic plants\n
&#8226;Poison-Sumac\n
&#8226;Poisontree\n
&#8226;Poison-Ivy\n
\t You should never touch these plants or burn them. Inhaling the smoke can create a rash on the lungs and even cause respiratory failure.</string>
    <string name="notes">Notes:</string>
</resources>