<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/button_padding"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/environment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/woods"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/environment"
        android:background="@drawable/woods"
        android:text="@string/woods"
        android:textColor="#ffffff"
        android:layout_marginBottom="3dp"
        android:onClick="onClick" />
    

    <Button
        android:id="@+id/desert"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/woods"
        android:background="@drawable/desert"
        android:text="@string/desert"
        android:textColor="#ffffff"
        android:layout_marginBottom="3dp" />
    <Button
        android:id="@+id/snow"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/desert"
        android:background="@drawable/snow"
        android:text="@string/snow"
        android:textColor="#000000"
        android:layout_marginBottom="3dp" />
    <Button
        android:id="@+id/water"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/snow"
        android:background="@drawable/water"
        android:text="@string/water"
        android:textColor="#ffffff"
        android:layout_marginBottom="3dp" />
    <Button
        android:id="@+id/swamp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/water"
        android:background="@drawable/swamp"
        android:text="@string/swamp"
        android:textColor="#ffffff"
        android:layout_marginBottom="3dp" />
    <Button
        android:id="@+id/fire"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/swamp"
        android:background="@drawable/fire"
        android:text="@string/fire"
        android:textColor="#ffffff"
        android:layout_marginBottom="3dp" />
    

</RelativeLayout>