<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".Woods"
	    android:orientation="vertical" >

	    <TextView
	        android:id="@+id/woods_hydrationHeader"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/hydration"
	        android:layout_marginTop="50dp"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <TextView
	        android:id="@+id/woods_hydrationDetail"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/woods_hydrationHeader"
	        android:layout_marginTop="0dp"
	        android:text="@string/woods_hydration" />
	    
	    <TextView
	        android:id="@+id/woods_foodHeader"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/food"
	        android:visibility="invisible"
	        android:layout_marginTop="50dp"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    <TextView
	        android:id="@+id/woods_foodDetail"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/woods_foodHeader"
	        android:visibility="invisible"
	        android:layout_marginTop="0dp"
	        android:text="@string/woods_food" />
	    
	    <TextView
	        android:id="@+id/woods_animalsHeader"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/animals"
	        android:visibility="invisible"
	        android:layout_marginTop="50dp"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    <TextView
	        android:id="@+id/woods_animalsDetail"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/woods_animalsHeader"
	        android:visibility="invisible"
	        android:layout_marginTop="0dp"
	        android:text="@string/woods_animals" />
	    
	    <TextView
	        android:id="@+id/woods_plantsHeader"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/plants"
	        android:visibility="invisible"
	        android:layout_marginTop="50dp"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    <TextView
	        android:id="@+id/woods_plantsDetail"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/woods_plantsHeader"
	        android:visibility="invisible"
	        android:layout_marginTop="0dp"
	        android:text="@string/woods_plants" />

	    <Button
	        android:id="@+id/btnWoodsNext"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/woods_hydrationHeader"
	        android:layout_marginTop="5dp"
	        android:layout_marginLeft="80dp"
	        android:layout_alignParentTop="true"
	        android:text="&#8658;"
	        android:onClick="onClick"/>

	</RelativeLayout>
</ScrollView>